examples/kubernetes/Example02_Simple-cluster/example02-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: example02-ns
---
apiVersion: v1
kind: Service
metadata:
  name: example02-app-svc
  namespace: example02-ns
spec:
  selector:
    app: example02-app
  ports:
    - name: app
      protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30002
    - name: jgroups
      protocol: TCP
      port: 7800
      targetPort: 7800
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: example02-db-svc
  namespace: example02-ns
spec:
  selector:
    app: example02-db
  type: NodePort
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: example02-db
  namespace: example02-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example02-db
  serviceName: example02-db-svc
  template:
    metadata:
      labels:
        app: example02-db
    spec:
      containers:
      - name:  postgres
        image: postgres:15.5
        resources:
          requests:
            memory: "500Mi"
            cpu: "0.3"
          limits:
            memory: "500Mi"
            cpu: "1.0"
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: example02-postgres-volume
          mountPath: /var/lib/postgresql/data
          subPath: postgres
      volumes:
      - name: example02-postgres-volume
        persistentVolumeClaim:
          claimName: example02-postgres-pvc
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: example02-app
  namespace: example02-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: example02-app
  serviceName: example02-app-svc
  template:
    metadata:
      labels:
        app: example02-app
    spec:
      containers:
      - name: cloverdx-server
        image: cloverdx/cloverdx-server
        resources:
          requests:
            memory: "4Gi"
            cpu: "0.5"
          limits:
            memory: "4Gi"
            cpu: "2.0"
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: example02-sandboxes-volume
          mountPath: /var/clover/sandboxes
          subPath: sandboxes
      volumes:
      - name: example02-sandboxes-volume
        persistentVolumeClaim:
          claimName: example02-sandboxes-pvc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: example02-tls-ingress
  namespace: example02-ns
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
spec:
  tls:
    - hosts:
      - <your-domain>
      secretName: example02-tls-secret
  ingressClassName: nginx
  rules:
  - host: <your-domain>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: example02-app-svc
            port:
              number: 8080
